Navbar z-index fix

--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -51,6 +51,7 @@
     transform: translateX(0);
     animation: open-menu 1s;
     opacity: 1;
+    z-index: 100;
 }
 
 @keyframes open-menu {
